<resources>
    <string name="app_name">AndroidLabs1</string>
    <string name="hello_message">Hello World!</string>
    <string name="toast_message">Here is more information</string>
    <string name="ButtonText">I am the button</string>
    <string name="GUI">Look at my GUI:</string>
    <string name="click">Click here</string>
    <string name="check">Check this out!</string>
    <string name="sw">Switch on/off</string>
    <string name="type">Type Here</string>
    <string name="email">Enter your email address</string>
    <string name="typeEmail">Type email here</string>
    <string name="password">Type your password</string>
    <string name="login">Login</string>
    <string name="yourProfile">Your profile</string>
    <string name="yourName">Your name:</string>
    <string name="enterName">Enter your name:</string>
    <string name="yourEmail">Your email:</string>
    <string name="enterEmail">Enter your email:</string>
    <string name="yourPicture">Your Picture:</string>
    <string name="clickTheButton">Click the button above to take a picture</string>
    <string name="chat">Go to chat</string>
    <string name="textField">Type here</string>
    <string name="SendText">Send</string>
    <string name="ReceiveText">Receive</string>
    <string name="alertBuilderTitle">Do you want to delete this? </string>
    <string name="alertBuilderMsg1">The selected row is:  </string>
    <string name="alertBuilderMsg2">The database id is:  </string>
    <string name="yes">Yes  </string>
    <string name="no">No </string>
    <string name="btn_weather">Check the weather </string>
    <string name="currentTemp">Current Temperature </string>
    <string name="minTemp">Minimum Temperature</string>
    <string name="maxTemp">Maximum Temperature </string>
    <string name="UV_rating">UV Rate </string>
    <string name="hide1">Hide</string>
    <string name="messageText">Message Here</string>
    <string name="idText">ID=</string>
    <string name="checkbox_receive">Is a Receive Message</string>
    <string name="checkbox_send">Is a Send Message</string>


</resources>