<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:visibility="visible">
    <TextView
        android:id="@+id/profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/yourProfile"
        android:textSize="23dp" />
    <TextView
        android:id="@+id/name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/yourName"
        android:textSize="23dp" />


    <EditText
        android:id="@+id/enterName"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enterName"
      />
    <TextView
        android:id="@+id/yourEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourEmail"
        android:textSize="23dp" />

    <EditText
        android:id="@+id/enterEmail"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/enterEmail"
        />
    <TextView
        android:id="@+id/yourPicture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/yourPicture"
        android:textSize="23dp" />


    <ImageButton
        android:id="@+id/ImageButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@android:drawable/picture_frame"
        android:visibility="visible" />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clickTheButton"
        android:textSize="23dp" />

    <Button
        android:id="@+id/chatBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/chat"
        android:textSize="14dip"
        android:visibility="visible" />

    <Button
        android:id="@+id/weatherForecastBtn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btn_weather" />






</LinearLayout>