<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:rowCount="4">

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="1"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/GUI"
        android:textSize="30dp" />

    <Button
        android:id="@+id/buttom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"

        android:layout_row="1"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:text="@string/click"
        android:textSize="14dip"

        />
    <CheckBox
        android:id="@+id/chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/check"
        android:visibility="visible" />



    <ImageButton
        android:id="@+id/img"
        android:layout_width="166dp"
        android:layout_height="wrap_content"
        android:layout_row="2"
        android:layout_columnWeight="1"
        android:layout_gravity="fill_horizontal"
        android:src="@drawable/flag" />


    <Switch
        android:id="@+id/swt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_columnWeight="2"
        android:layout_gravity="fill_horizontal"
        android:text="@string/sw" />

    <EditText
        android:id="@+id/edt"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_columnSpan="2"
        android:layout_gravity="fill_horizontal"
        android:hint="@string/type"
        android:inputType="textPersonName|textCapWords" />



</GridLayout>