<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/top"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="@string/GUI"
        android:textSize="30dp" />


    <Button
        android:id="@+id/buttom1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="2dp"
        android:text="@string/click"
        android:textSize="14dip"
        android:visibility="visible" />

    <CheckBox
        android:id="@+id/chb"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/top"
        android:layout_alignParentRight="true"
        android:layout_marginTop="4dp"
        android:text="@string/check"
        android:visibility="visible" />

    <ImageButton
        android:id="@+id/img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttom1"
        android:layout_alignParentLeft="true"
        android:src="@drawable/flag"

        />

    <Space
        android:id="@+id/space"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/chb"
        android:layout_alignParentRight="true"
      />


    <Switch
        android:id="@+id/swt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/space"
        android:layout_alignParentRight="true"
        android:layout_marginTop="69dp"
        android:layout_marginRight="30dp"
        android:text="@string/sw" />

    <EditText
        android:id="@+id/edt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type"
        android:inputType="textPersonName|textCapWords"
        android:layout_below="@id/img"
        />

</RelativeLayout>