<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorFragment"
    tools:context=".DetailsFragment">

    <!-- TODO: Update blank fragment layout -->
    <RelativeLayout
        android:id="@+id/fragmentLocation"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/messageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/messageText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <TextView
            android:id="@+id/idText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/messageText"
            android:text="@string/idText"
            android:textAppearance="@style/TextAppearance.AppCompat.Large" />

        <CheckBox
            android:id="@+id/checkBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_marginTop="64dp"
            android:layout_marginEnd="2dp"
            android:text="@string/checkbox_send" />

        <Button
            android:id="@+id/buttonHide"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:text="@string/hide1" />

    </RelativeLayout>
</FrameLayout>