
<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="visible">
    <TextView
        android:id="@+id/top1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text ="@string/email"
        android:textSize="23dp" />
   <EditText
        android:id="@+id/edt1"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:hint="@string/typeEmail"
       android:inputType="textEmailAddress" />
    <TextView
        android:id="@+id/top2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/password"
        android:textSize="30dp" />

    <EditText
        android:id="@+id/edt2"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:inputType="textPassword"

       />




</LinearLayout>