<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"


    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_weather_forecast"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <ImageView
        android:id="@+id/weatherImageView"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        />

    <TextView
        android:id="@+id/currentTempTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/currentTemp"
        />

    <TextView
        android:id="@+id/minTempTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/minTemp"/>

    <TextView
        android:id="@+id/maxTempTextView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/maxTemp"/>

    <TextView
        android:id="@+id/UV_rating"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:typeface="monospace"
        android:text="@string/UV_rating"/>


    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:visibility="invisible" />

</LinearLayout>